--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cheerio": "^1.0.0-rc.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "mongoose": "^5.2.4",
     "morgan": "^1.9.0"
   }
